--- a/style.css
+++ b/style.css
@@ -13,12 +13,13 @@
 
 
 nav h1{
+display: inline;
+padding: 10px;
 
 }
 
 nav li{
-    
-    margin: 25px 10px 0 0;
+    display: inline;
     
 }
 
