--- a/style.css
+++ b/style.css
@@ -5,16 +5,20 @@
 }
 
 .Cajablanca{
-    background: red;
+    background: white;
     width: auto;
-    margin: 0 0;
+    margin: 0 20px 0 20px;
+    position: relative;
+
 }
+
 
 
 
 nav h1{
 display: inline;
 padding: 10px;
+;
 
 }
 
@@ -29,6 +33,8 @@ nav a {
     font-weight: bold;
     font-size: 15px;
     text-decoration: none;
+    vertical-align: middle;
+    margin: 0 10px 0 0;
 }
 
 nav a:hover {
